2011-10-08 Tamino Dauth <tamino@cdauth.eu>
* Removed unnecessary MIME type files of gedit highlighting files (wc3lib does already provide all required MIME types).
* mpq: Listfile creation is considered now when opening the MPQ archive.
* mpq: Added member function Sector::compressionSucceded().
* mpq: Class Sector considers size of 0 now.

2011-10-07 Tamino Dauth <tamino@cdauth.eu>
* Added syntax highlighting files.
* mpq: Added class Listfile.

2011-10-06 Tamino Dauth <tamino@cdauth.eu>
* mpq: Improved class HashData.
* mpq: Dropped obsolete parameters of function Mpq::create().
* mpq: Added class Signature.
* mpq: Improved versions of different signing and checking functions (strong and weak signatures are more separated now).
* Dropped all remaining StormLib dependencies.
* Added CMake instructions for getting Crypto++ library (new dependency).
* mpq: MpqFile::writeData() uses better locking and streaming method now which should improve its performance.
* ebuild: Added Crypto++ dependency.
* ebuild: Added English useflag descriptions.

2011-10-01 Tamino Dauth <tamino@cdauth.eu>
* mpq: Added class Attributes.
* mpq: Index of blocks is stored by their corresponding objects now.
* mpq: Type FILETIME supports more operations now.
* mpq: Dropped many deprecated functions.

2011-09-26 Tamino Dauth <tamino@cdauth.eu>
* Fixed and improved Doxygen API target thanks to https://invalidmagic.wordpress.com/2009/11/30/cmake-and-doxygen-github-com/.
* mpq: Improved performance of sector creation.
* Added map and campaign related MIME types.
* mpq: Class HashData can be constructed via path, locale and platform only now.

2011-09-25 Tamino Dauth <tamino@cdauth.eu>
* mpq: Added and improved various member functions to support faster extracting of end-to-end stored data and seeking to sectors' positions.
* app: Added option "store-sectors" to application "mpq".

2011-09-23 Tamino Dauth <tamino@cdauth.eu>
* mpq: Two different sector storage models are supported now.